pom.xml file change java updated